--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Main Content Container -->
     <div class="container">
         <h1 id="valentineTitle"></h1>
-        
+
         <!-- Music Player -->
         <div id="musicControls" class="music-controls">
             <button id="musicToggle" class="music-btn">🎵 Play Music</button>
@@ -29,43 +29,53 @@
             </audio>
         </div>
 
-        <!-- First Question -->
-        <div class="question-section" id="question1">
-            <h2 id="question1Text"></h2>
-            <button class="cute-btn" onclick="moveButton(this)" id="yesBtn1"></button>
-            <button class="cute-btn" onclick="moveButton(this)" id="noBtn1"></button>
-            <!-- CUSTOMIZE: Secret answer text -->
-            <div class="secret-answer">
-                <button class="cute-btn special" onclick="showNextQuestion(2)" id="secretAnswerBtn"></button>
-            </div>
+        <!-- Stage 1 - Opening -->
+        <div class="stage hidden" id="stage1">
+            <div id="emoji1" class="stage-emoji"></div>
+            <h2 id="mainText1"></h2>
+            <p id="paragraph1"></p>
+            <button class="cute-btn" onclick="goToStage(2)" id="button1"></button>
         </div>
 
-        <!-- Second Question (Love Meter) -->
-        <div class="question-section hidden" id="question2">
-            <h2 id="question2Text"></h2>
-            <!-- Love meter settings: min="0" max="10000" -->
-            <div class="love-meter">
-                <input type="range" min="0" max="10000" value="100" class="slider" id="loveMeter">
-                <p>
-                    <span class="love-value-container"><span id="startText"></span> (<span id="loveValue">100</span>%)</span>
-                    <span id="extraLove" class="hidden"></span>
-                </p>
-            </div>
-            <button class="cute-btn" onclick="showNextQuestion(3)" id="nextBtn"></button>
+        <!-- Stage 2 - Personal Memories -->
+        <div class="stage hidden" id="stage2">
+            <h2 id="mainText2"></h2>
+            <div id="memoriesContainer" class="memories-container"></div>
+            <p id="smallText2" class="small-text"></p>
+            <p id="italicText2" class="italic-text"></p>
+            <button class="cute-btn" onclick="goToStage(3)" id="button2"></button>
         </div>
 
-        <!-- Final Question -->
-        <div class="question-section hidden" id="question3">
-            <h2 id="question3Text"></h2>
-            <button class="cute-btn final-yes" onclick="celebrate()" id="yesBtn3"></button>
-            <button class="cute-btn" onclick="moveButton(this)" id="noBtn3"></button>
+        <!-- Stage 3 - The Big Question -->
+        <div class="stage hidden" id="stage3">
+            <div id="emoji3" class="stage-emoji"></div>
+            <h2 id="mainQuestion3"></h2>
+            <button class="cute-btn final-yes" onclick="goToStage(4)" id="yesBtn3"></button>
+            <button class="cute-btn" onclick="handleNoButton()" id="noBtn3"></button>
         </div>
 
-        <!-- CUSTOMIZE: Celebration message -->
-        <div class="celebration hidden" id="celebration">
-            <h2 id="celebrationTitle"></h2>
-            <p class="celebration-text" id="celebrationMessage"></p>
-            <p class="celebration-text" id="celebrationEmojis"></p>
+        <!-- Stage 4 - Twist -->
+        <div class="stage hidden" id="stage4">
+            <h2 id="mainText4"></h2>
+            <p id="paragraph4"></p>
+            <button class="cute-btn" onclick="goToStage(5)" id="button4"></button>
+        </div>
+
+        <!-- Stage 5 - Final Proper Ask -->
+        <div class="stage hidden" id="stage5">
+            <h2 id="firstLine5"></h2>
+            <p id="paragraph5a"></p>
+            <h2 id="mainQuestion5"></h2>
+            <p id="paragraph5b"></p>
+            <button class="cute-btn final-yes" onclick="celebrate()" id="button5"></button>
+        </div>
+
+        <!-- Stage 6 - Celebration -->
+        <div class="stage hidden" id="stage6">
+            <div id="emoji6" class="stage-emoji"></div>
+            <h2 id="mainText6"></h2>
+            <p id="subtext6"></p>
+            <p id="footer6" class="footer-text"></p>
         </div>
     </div>
 
